Start implementing past week details endpoint
